JITL-240: pretty print